<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">家計簿</string>
    <string name="current_month_title">今月</string>
    <string name="daily_summary_tab_label">日別</string>
    <string name="month_summary_tab_label">月別</string>
    <string name="money_unit">円</string>
    <string name="add_btn_label">追加</string>
    <string name="sum_title_label">集計</string>
    <string name="income_label">収入</string>
    <string name="payment_label">支出</string>
    <string name="input_date_label">日付</string>
    <string name="category_label">項目</string>
    <string name="money_label">金額</string>
    <string name="memo_label">メモ</string>
    <string name="kind_label">種類</string>
    <string name="regist_btn_label">登録</string>
    <string name="modify_btn_label">修正</string>
    <string name="delete_btn_label">削除</string>
    <string name="regist_category_label">登録項目</string>
    <string name="regist_msg">家計簿の登録が完了しました</string>
    <string name="modify_msg">家計簿の修正が完了しました</string>
    <string name="delete_confirm_msg">データを削除しますか？</string>
    <string name="delete_confirm_yes">はい</string>
    <string name="delete_confirm_no">いいえ</string>
    <string name="delete_msg">データの削除が完了しました</string>
    <string name="regist_alert_msg">入力内容を確認してください</string>
    <string name="estimate_label">予算</string>
    <string name="estimate_rest_money_label">予算残</string>
    <string name="estimate_title">今月の予算をメニューから入力してください</string>
    <string name="estimate_again_title">適切な予算を入力してください</string>
    <string name="configuration_title">アプリケーション設定</string>
    <string name="estimate_configuration_title">予算機能</string>
    <string name="estimate_money_configuration_title">予算金額</string>
    <string name="target_user_configuration_title">対象ユーザー</string>
    <string name="menu_configuration_title">設定</string>
    <string name="menu_account_data_edit_title">編集</string>
    <string name="menu_account_data_input_output_title">データ入出力</string>
    <string name="menu_account_data_edit_list_title">編集項目</string>
    <string name="menu_master_edit_title">カテゴリ編集</string>
    <string name="menu_user_edit_title">ユーザー編集</string>
    <string name="menu_clear_all_account_data">家計簿データ初期化</string>
    <string name="menu_clear_all_account_data_message">データを初期化しますか?</string>
    <string name="menu_input_output_account_data_title">CSVデータ入出力</string>
    <string name="menu_input_account_data_title">CSVデータ入力</string>
    <string name="menu_output_account_data_title">CSVデータ出力</string>
    <string name="estimate_configuration_enable">有効</string>
    <string name="estimate_configuration_unenable">無効</string>
    <string name="sunday">日</string>
    <string name="monday">月</string>
    <string name="tuesday">火</string>
    <string name="wednesday">水</string>
    <string name="thursday">木</string>
    <string name="friday">金</string>
    <string name="saturday">土</string>
    <string name="payment_pie_chart_title_suffix">月度支出グラフ</string>
    <string name="income_graph_title_suffix">月度収入グラフ</string>
    <string name="year_str">年</string>
    <string name="month_str">月</string>
    <string name="graph_no_data">データがありません</string>
    <string name="payment_line_chart_title_suffix">年度支出グラフ</string>
    <string name="payment_sum_title">合計</string>
    <string name="add_category_dialog_title">カテゴリ追加</string>
    <string name="kind_label_spinner">選択してください</string>
    <string name="add_category_message">カテゴリを追加しました</string>
    <string name="modify_category_message">カテゴリを修正しました</string>
    <string name="add_category_alert_message">入力内容を確認して下さい\n(項目重複等を確認してください)</string>
    <string name="del_category_repletion_message">使用している項目は削除できません</string>
    <string name="start_day_title">月の開始日</string>
    <string name="day_unit_string">日</string>
    <string name="estimate_money_summary_suffix">月度予算：</string>
    <string name="payment_period">期間</string>
    <string name="user_name_label">名前</string>
    <string name="user_memo_label">メモ</string>
    <string name="add_user_dialog_title">ユーザー情報追加</string>
    <string name="edit_user_dialog_title">ユーザー情報編集</string>
    <string name="add_user_message">ユーザー情報を追加しました</string>
    <string name="add_user_alert_message">入力内容を確認して下さい\n(ユーザー名の重複等)</string>
    <string name="modify_user_message">ユーザー情報を変更しました</string>
    <string name="delete_user_confirm_msg">関連するデータも削除します。よろしいですか？</string>
    <string name="del_user_repletion_message">デフォルトユーザーは削除できません</string>
    <string name="export_data_success">正常にデータ出力できました</string>
    <string name="import_data_success">正常にデータ入力できました</string>
    <string name="export_data_error">データ出力できませんでした\nSDカードを確認して下さい</string>
    <string name="import_data_error">データ入力できませんでした\nSDカードを確認して下さい</string>
    <string name="import_progress_dialog_title">CSVデータ入力</string>
    <string name="import_progress_dialog_message">インポート中......</string>
    <string name="export_progress_dialog_title">CSVデータ出力</string>
    <string name="export_progress_dialog_message">エクスポート中......</string>
    <string name="loading_progress_dialog_title">データベース読込</string>
    <string name="loading_progress_dialog_message">読込中......</string>
    <string name="clear_account_data_progress_dialog_title">家計簿データ初期化</string>
    <string name="clear_account_data_progress_dialog_message">初期化中......</string>
    <string name="clear_account_data_complete">家計簿データを初期化しました</string>
</resources>

