<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_account_master_dialog"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    >
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:gravity="center"
        />
    <ImageView
        android:src="@android:drawable/divider_horizontal_dark"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20px"
        >
        <TextView
            android:id="@+id/category_label"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_label"
            />
        <EditText
            android:text=""
            android:id="@+id/category_value"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="20sp"
            android:maxLength="10"
            android:layout_width="0dip"
            android:layout_weight="2"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15px"
        >
        <TextView
            android:id="@+id/kind_label"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kind_label"
            />
        <Spinner
            android:id="@+id/kind_spinner"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_width="0dip"
            android:layout_weight="2"
            android:entries="@array/kind_array"
            android:prompt="@string/kind_label_spinner"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/commit_btn_area"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <Button
            android:id="@+id/regist_btn"
            android:layout_width="100px"
            android:layout_height="wrap_content"
            android:text= "@string/regist_btn_label"
            android:layout_marginTop="10px"
            android:layout_marginBottom="10px"
            />
    </LinearLayout>
</LinearLayout>

