<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/current_calendar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10px"
    >
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="0,1,2,3,4,5,6"
        >
        <TableRow>
            <TextView
                android:gravity="center_horizontal"
                android:textColor="@color/red"
                android:background="@drawable/border_sunday"
                android:textSize="15px"
                android:text="@string/sunday"
                />
            <TextView
                android:gravity="center_horizontal"
                android:background="@drawable/border_weekday"
                android:textSize="15px"
                android:text="@string/monday"
                />
            <TextView
                android:gravity="center_horizontal"
                android:background="@drawable/border_weekday"
                android:textSize="15px"
                android:text="@string/tuesday"
                />
            <TextView
                android:gravity="center_horizontal"
                android:background="@drawable/border_weekday"
                android:textSize="15px"
                android:text="@string/wednesday"
                />
            <TextView
                android:gravity="center_horizontal"
                android:background="@drawable/border_weekday"
                android:textSize="15px"
                android:text="@string/thursday"
                />
            <TextView
                android:gravity="center_horizontal"
                android:background="@drawable/border_weekday"
                android:textSize="15px"
                android:text="@string/friday"
                />
            <TextView
                android:gravity="center_horizontal"
                android:textColor="@color/blue"
                android:background="@drawable/border_saturday"
                android:textSize="15px"
                android:text="@string/saturday"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/calendar_cell_0"
                android:textColor="@color/red"
                />
            <TextView
                android:id="@+id/calendar_cell_1"
                />
            <TextView
                android:id="@+id/calendar_cell_2"
                />
            <TextView
                android:id="@+id/calendar_cell_3"
                />
            <TextView
                android:id="@+id/calendar_cell_4"
                />
            <TextView
                android:id="@+id/calendar_cell_5"
                />
            <TextView
                android:id="@+id/calendar_cell_6"
                android:textColor="@color/blue"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/calendar_cell_7"
                android:textColor="@color/red"
                />
            <TextView
                android:id="@+id/calendar_cell_8"
                />
            <TextView
                android:id="@+id/calendar_cell_9"
                />
            <TextView
                android:id="@+id/calendar_cell_10"
                />
            <TextView
                android:id="@+id/calendar_cell_11"
                />
            <TextView
                android:id="@+id/calendar_cell_12"
                />
            <TextView
                android:id="@+id/calendar_cell_13"
                android:textColor="@color/blue"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/calendar_cell_14"
                android:textColor="@color/red"
                />
            <TextView
                android:id="@+id/calendar_cell_15"
                />
            <TextView
                android:id="@+id/calendar_cell_16"
                />
            <TextView
                android:id="@+id/calendar_cell_17"
                />
            <TextView
                android:id="@+id/calendar_cell_18"
                />
            <TextView
                android:id="@+id/calendar_cell_19"
                />
            <TextView
                android:id="@+id/calendar_cell_20"
                android:textColor="@color/blue"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/calendar_cell_21"
                android:textColor="@color/red"
                />
            <TextView
                android:id="@+id/calendar_cell_22"
                />
            <TextView
                android:id="@+id/calendar_cell_23"
                />
            <TextView
                android:id="@+id/calendar_cell_24"
                />
            <TextView
                android:id="@+id/calendar_cell_25"
                />
            <TextView
                android:id="@+id/calendar_cell_26"
                />
            <TextView
                android:id="@+id/calendar_cell_27"
                android:textColor="@color/blue"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/calendar_cell_28"
                android:textColor="@color/red"
                />
            <TextView
                android:id="@+id/calendar_cell_29"
                />
            <TextView
                android:id="@+id/calendar_cell_30"
                />
            <TextView
                android:id="@+id/calendar_cell_31"
                />
            <TextView
                android:id="@+id/calendar_cell_32"
                />
            <TextView
                android:id="@+id/calendar_cell_33"
                />
            <TextView
                android:id="@+id/calendar_cell_34"
                android:textColor="@color/blue"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/calendar_cell_35"
                android:textColor="@color/red"
                />
            <TextView
                android:id="@+id/calendar_cell_36"
                />
            <TextView
                android:id="@+id/calendar_cell_37"
                />
            <TextView
                android:id="@+id/calendar_cell_38"
                />
            <TextView
                android:id="@+id/calendar_cell_39"
                />
            <TextView
                android:id="@+id/calendar_cell_40"
                />
            <TextView
                android:id="@+id/calendar_cell_41"
                android:textColor="@color/blue"
                />
        </TableRow>
    </TableLayout>
</LinearLayout>

