<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
  <TextView
      android:id="@+id/date_title"
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      android:text=""
      android:textSize="30sp"
      />
  <ImageView
      android:src="@android:drawable/divider_horizontal_dark"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:scaleType="fitXY"
      android:paddingLeft="5dp"
      android:paddingRight="5dp"
      android:paddingBottom="8dp"
      android:paddingTop="8dp"
      />
  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="20px"
      >
    <TextView
        android:id="@+id/category_label"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_label"
        />
    <EditText
        android:text="" 
        android:id="@+id/category_value"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:inputType="none"
        android:layout_width="0dip"
        android:layout_weight="2"
        />
    <ImageButton
        android:id="@+id/category_select_btn"
        android:layout_width="35px"
        android:layout_height="35px"
        android:src="@android:drawable/ic_menu_always_landscape_portrait"
        />
  </LinearLayout>
  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="15px"
      >
    <TextView
        android:id="@+id/money_label"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money_label"
        />
    <EditText
        android:text="" 
        android:id="@+id/money_value"
        android:layout_height="wrap_content" 
        android:textSize="20sp"
        android:inputType="none"
        android:layout_width="0dip"
        android:layout_weight="2"
        />
    <ImageButton
        android:id="@+id/money_btn"
        android:layout_width="35px"
        android:layout_height="35px"
        android:src="@android:drawable/ic_menu_edit"
        />
  </LinearLayout>
    <LinearLayout
      android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="15px"
      >
    <TextView
        android:id="@+id/memo_label"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memo_label"
        />
    <EditText
        android:text="" 
        android:id="@+id/memo_value"
        android:layout_height="wrap_content" 
        android:textSize="20sp"
        android:inputType="text"
        android:layout_width="0dip"
        android:layout_weight="2"
        />
  </LinearLayout>
  <LinearLayout
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      >
    <Button
        android:id="@+id/regist_btn"
        android:layout_width="100px"
        android:layout_height="wrap_content"
        android:text= "@string/regist_btn_label"
        android:layout_marginTop="20px"
        />
  </LinearLayout>
</LinearLayout>

