<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_account_record"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    >
    <TextView
        android:id="@+id/date_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:gravity="center"
        />
    <ImageView
        android:src="@android:drawable/divider_horizontal_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5px"
        >
        <TextView
            android:id="@+id/category_label"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_label"
            />
        <Spinner
            android:id="@+id/category_spinner"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_width="0dip"
            android:layout_weight="2"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8px"
        >
        <TextView
            android:id="@+id/memo_label"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memo_label"
            />
        <EditText
            android:text=""
            android:id="@+id/memo_value"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:inputType="text"
            android:layout_width="0dip"
            android:layout_weight="2"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8px"
        >
        <TextView
            android:id="@+id/money_label"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money_label"
            />
        <EditText
            android:text=""
            android:id="@+id/money_value"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:maxLength="9"
            android:inputType="number"
            android:digits="0123456789"
            android:layout_width="0dip"
            android:layout_weight="2"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/commit_btn_area"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <Button
            android:id="@+id/regist_btn"
            android:layout_width="100px"
            android:layout_height="wrap_content"
            android:text= "@string/regist_btn_label"
            android:layout_marginTop="5px"
            android:layout_marginBottom="5px"
            />
    </LinearLayout>
</LinearLayout>

